<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fluper.foodtruckuser.activities.ForgetPasswordActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_header" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_80"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/please_enter_your_registered_email_address_to_receive_otp"
        android:textSize="@dimen/sp_15" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_40"

        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_140">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_15"
            tools:ignore="TextFields"
            android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_below="@+id/til_email"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/btn_custom_red"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_15"
        android:textStyle="bold" />


</RelativeLayout>
