<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fluper.foodtruckuser.activities.MyAccountEditActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_header" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_30">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_user_profile"
                android:layout_width="@dimen/dp_80"
                android:layout_height="@dimen/dp_80"
                android:layout_centerHorizontal="true"
                android:src="@drawable/user_placeholder"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_width="@dimen/dp_2" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_full_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                android:layout_below="@id/civ_user_profile"
                android:layout_marginTop="@dimen/dp_20">

                <EditText
                    android:id="@+id/et_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:hint="@string/complete_name"
                    android:inputType="text"
                    android:padding="@dimen/dp_5"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_15" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                android:layout_below="@id/til_full_name">

                <EditText
                    android:id="@+id/et_email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:hint="@string/email"
                    android:padding="@dimen/dp_5"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_15" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/phone_no"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/til_email"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_country_code"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/_1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_15"
                    tools:ignore="LabelFor,TextFields" />

                <View
                    android:layout_width="@dimen/dp_1"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dp_10"
                    android:alpha="0.5"
                    android:background="@color/colorBlack" />


                <EditText
                    android:id="@+id/et_phone_no"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/phone_number"
                    android:padding="@dimen/dp_5"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_15"
                    tools:ignore="TextFields"
                    android:maxLength="12"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/phone_no"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/btn_custom_red"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_15"
                android:textStyle="bold" />

        </RelativeLayout>


    </RelativeLayout>

</ScrollView>
