<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.fluper.foodtruckuser.activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_40"
            android:padding="@dimen/dp_5"
            android:scaleType="fitXY"
            android:src="@drawable/logo"
            tools:ignore="ContentDescription" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_login_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:layout_below="@id/iv_login_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:hint="@string/email"
                android:padding="@dimen/dp_5"
                android:textColor="@color/colorPrimary"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/sp_15"
                tools:ignore="TextFields">

            </EditText>
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:id="@+id/rl_login_password"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_70"
            android:layout_below="@id/til_login_email"
            android:layout_marginTop="@dimen/dp_10">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_login_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/dp_40"
                android:layout_marginRight="@dimen/dp_40">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_15" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="@dimen/dp_18"
                android:layout_marginEnd="@dimen/dp_40"
                android:text="@string/forget"
                android:padding="@dimen/dp_6"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sp_15" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_below="@id/rl_login_password"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/btn_custom_red"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_15"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_below="@id/btn_login"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/btn_custom_white"
            android:text="@string/new_user_sign_up"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_15"
            android:textStyle="bold" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/btn_sign_up"
            android:layout_marginTop="@dimen/dp_60"
            android:scaleType="fitXY"
            android:src="@drawable/bg_login"
            tools:ignore="ContentDescription" />
    </RelativeLayout>
</ScrollView>
